Pequena implementação para definir tamnho do <textarea> em contao

--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,8 @@
 							<option>Elogios</option>
 						</select><br><br>
 						<strong>Descrição: </strong><br>
-						<textarea></textarea><br><br>
+						<textarea cols="80" rows="15"></textarea><br><br>
+
 						<input type="submit" value="Enviar">
 
 					</form>
